--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,8 @@ AllCops:
     - db/**/*
     - bin/*
   RunRailsCops: true
+Lint/ParenthesesAsGroupedExpression:
+  Enabled: false
 Metrics/LineLength:
   Enabled: false
 Style/Documentation:
