--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -4,6 +4,9 @@ linters:
   NestingDepth:
     enabled: true
     max_depth: 4
+  SelectorDepth:
+    enabled: true
+    max_depth: 4
   StringQuotes:
     enabled: true
     style: double_quotes
