--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
 before_script:
   - psql -c 'create database draconomicon_test;' -U postgres
 env:
-  - RAILS_ENV=test
+  - RAILS_ENV=test RACK_TIMEOUT=30
 notifications:
   email:
     recipients:
