--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@
 !/log/.keep
 /tmp
 
+# Vendored Bower components
+/vendor/assets/bower_components/
+/vendor/assets/.bowerrc
+/vendor/assets/bower.json
+
 # Misc.
 .env
 .envrc
