--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -23,3 +23,5 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   devise_secret_key: <%= ENV["DEVISE_SECRET_KEY"] %>
+  sendgrid_username: <%= ENV["SENDGRID_USERNAME"] %>
+  sendgrid_password: <%= ENV["SENDGRID_PASSWORD"] %>
