--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -15,7 +15,7 @@ common: &default_settings
   # You must specify the license key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
   # New Relic service.
-  license_key: 'b2da30424098e4ac901534bd4a71e45180dbe31e'
+  license_key: <%= ENV["NEW_RELIC_LICENSE_KEY"] %>
 
   # Agent Enabled (Ruby/Rails Only)
   # Use this setting to force the agent to run or not run.
