Enable travis caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ addons:
     repo_token: 024f95ec0563c35d69be6daa57c3cd415c57c55ae532f7590529cf3819c4e13d
 before_script:
   - psql -c 'create database draconomicon_test;' -U postgres
+cache: bundler
 env:
   - RAILS_ENV=test RACK_TIMEOUT=30
 notifications:
