--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "url": "https://github.com/tough-griff/draconomicon/issues"
   },
   "homepage": "https://github.com/tough-griff/draconomicon#readme",
+  "scripts": {
+    "webpack": "webpack -d --display-reasons --display-chunks --progress --colors"
+  },
   "devDependencies": {
     "babel-core": "^5.6.3",
     "babel-loader": "^5.1.4",
+    "babel-runtime": "^5.6.4",
     "expose-loader": "^0.7.0",
     "node-libs-browser": "^0.5.2",
     "webpack": "^1.9.11"
