--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
   },
   "homepage": "https://github.com/tough-griff/draconomicon#readme",
   "scripts": {
-    "webpack": "webpack -d --display-reasons --display-chunks --progress --colors"
+    "build": "webpack --watch --display-reasons --display-chunks --progress --colors",
+    "lint": "eslint js --ext .js --ext .jsx"
   },
   "devDependencies": {
-    "babel-core": "^5.6.3",
-    "babel-loader": "^5.1.4",
-    "babel-runtime": "^5.6.4",
+    "babel-core": "^5.6.15",
+    "babel-eslint": "^3.1.20",
+    "babel-loader": "^5.2.2",
+    "babel-runtime": "^5.6.15",
+    "eslint": "^0.24.0",
+    "eslint-plugin-react": "^2.5.2",
     "expose-loader": "^0.7.0",
     "node-libs-browser": "^0.5.2",
-    "webpack": "^1.9.11"
+    "react-hot-loader": "^1.2.7",
+    "webpack": "^1.10.0",
+    "webpack-dev-server": "^1.10.1"
   },
   "dependencies": {
     "jquery": "^2.1.4",
-    "lodash": "^3.9.3",
+    "lodash": "^3.10.0",
     "react": "^0.13.3"
   }
 }
