--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draconomicon",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "an open-source, web-based character management platform for table-top RPGs.",
   "repository": {
     "type": "git",
@@ -14,7 +14,8 @@
   "homepage": "https://github.com/tough-griff/draconomicon#readme",
   "scripts": {
     "build": "webpack --watch --display-reasons --display-chunks --progress --colors",
-    "lint": "eslint js --ext .js --ext .jsx"
+    "lint": "eslint js/ --ext .js --ext .jsx",
+    "start": "foreman start -f Procfile.dev"
   },
   "devDependencies": {
     "babel-core": "^5.6.15",
