--- a/package.json
+++ b/package.json
@@ -13,26 +13,26 @@
   },
   "homepage": "https://github.com/tough-griff/draconomicon#readme",
   "scripts": {
-    "build": "webpack --watch --display-reasons --display-chunks --progress --colors",
-    "lint": "eslint js/ --ext .js --ext .jsx",
-    "start": "foreman start -f Procfile.dev"
-  },
-  "devDependencies": {
-    "babel-core": "^5.6.15",
-    "babel-eslint": "^3.1.20",
-    "babel-loader": "^5.2.2",
-    "babel-runtime": "^5.6.15",
-    "eslint": "^0.24.0",
-    "eslint-plugin-react": "^2.5.2",
-    "expose-loader": "^0.7.0",
-    "node-libs-browser": "^0.5.2",
-    "react-hot-loader": "^1.2.7",
-    "webpack": "^1.10.0",
-    "webpack-dev-server": "^1.10.1"
+    "lint": "eslint --ext .js --ext .jsx js",
+    "start": "foreman start -f Procfile.dev",
+    "webpack": "node webpack.js"
   },
   "dependencies": {
-    "jquery": "^2.1.4",
-    "lodash": "^3.10.0",
-    "react": "^0.13.3"
+    "react": "^0.14.0-beta1",
+    "react-dom": "^0.14.0-beta1",
+    "react-router": "^1.0.0-beta3"
+  },
+  "devDependencies": {
+    "babel-core": "^5.7.2",
+    "babel-eslint": "^3.1.23",
+    "babel-loader": "^5.3.2",
+    "babel-runtime": "^5.7.0",
+    "eslint": "^0.24.1",
+    "eslint-loader": "^0.14.1",
+    "eslint-plugin-react": "^2.7.0",
+    "node-libs-browser": "^0.5.2",
+    "react-hot-loader": "^1.2.8",
+    "webpack": "^1.10.1",
+    "webpack-dev-server": "^1.10.1"
   }
 }
