Simplify development setup and process

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -11,12 +11,12 @@
 # if you're sharing your code publicly.
 
 development:
-  airbrake_api_key: <%= ENV["AIRBRAKE_API_KEY"] %>
+  airbrake_api_key: FAKE_AIRBRAKE_KEY
   devise_secret_key: FAKE_DEVISE_KEY
   secret_key_base: FAKE_SECRET_KEY
 
 test:
-  airbrake_api_key: <%= ENV["AIRBRAKE_API_KEY"] %>
+  airbrake_api_key: FAKE_AIRBRAKE_KEY
   devise_secret_key: FAKE_DEVISE_KEY
   secret_key_base: FAKE_SECRET_KEY
 
