--- a/.haml-lint.yml
+++ b/.haml-lint.yml
@@ -1,3 +1,8 @@
 linters:
+  RuboCop:
+    ignored_cops:
+      - Style/NestedTernaryOperator
+      - Style/TrailingBlankLines
+
   LineLength:
     enabled: false
