--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -2,6 +2,9 @@ linters:
   NestingDepth:
     enabled: true
     max_depth: 5
+  QualifyingElement:
+    exclude:
+      - app/assets/stylesheets/bitters/_forms.scss
   SelectorDepth:
     enabled: true
     max_depth: 4
