--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -22,6 +22,13 @@ test:
 
 # Do not keep production secrets in the repository,
 # instead read values from the environment.
+staging:
+  airbrake_api_key: <%= ENV["AIRBRAKE_API_KEY"] %>
+  devise_secret_key: <%= ENV["DEVISE_SECRET_KEY"] %>
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  sendgrid_password: <%= ENV["SENDGRID_PASSWORD"] %>
+  sendgrid_username: <%= ENV["SENDGRID_USERNAME"] %>
+
 production:
   airbrake_api_key: <%= ENV["AIRBRAKE_API_KEY"] %>
   devise_secret_key: <%= ENV["DEVISE_SECRET_KEY"] %>
