--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "postdeploy": "bundle exec rake db:setup"
   },
   "env": {
-    "DEPLOY_TASKS": "",
+    "DEPLOY_TASKS": "about",
     "DEVISE_SECRET_KEY": {
       "required": true
     },
